hybris-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: oms.base
  namespace: hybris-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oms.base
  template:
    metadata:
      labels:
        name: oms.base
    spec:
      containers:
      - name: oms.base
        image: registry:5000/oms.base:origin
        ports:
        - containerPort: 9002
          protocol: TCP
        volumeMounts:
        - name: data-volume
          mountPath: /home/hybris/data
          # Create on-disk volume to store exec logs
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 9002
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 300
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 9002
          initialDelaySeconds: 200
          periodSeconds: 10
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: hybris-pvc
---
# ------------------- Hybris Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: oms.base-service
  namespace: hybris-app
spec:
  ports:
    - port: 9002
      targetPort: 9002
  selector:
    name: oms.base
# ------------------- Hybris Ingress ------------------- #

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oms.base-ingress
  namespace: hybris-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: oms.base
    http:
      paths:
      - backend:
          serviceName: oms.base-service
          servicePort: 9002
